<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/global_elo_table"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/TableStyle">

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/standings_text"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/teams_text"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/region_text"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/elo_text"
                    />
            </TableRow>

        </TableLayout>
    </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>