<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/na_rlcs_standings_table"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/TableStyle">
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/standings_text"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/teams_text"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/records_text"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    />
                <TextView
                    />
                <TextView
                    />
            </TableRow>

            <TableRow>
                <TextView
                    />
                <TextView
                    />
                <TextView
                    />
            </TableRow>

            <TableRow>
                <TextView
                    />
                <TextView
                />
                <TextView
                    />
            </TableRow>

            <TableRow>
                <TextView
                    />
                <TextView
                    />
                <TextView
                    />
            </TableRow>

            <TableRow>
                <TextView
                    />
                <TextView
                    />
                <TextView
                    />
            </TableRow>

            <TableRow>
                <TextView
                    />
                <TextView
                    />
                <TextView
                    />
            </TableRow>

            <TableRow>
                <TextView
                    />
                <TextView
                    />
                <TextView
                    />
            </TableRow>

            <TableRow>
                <TextView
                    />
                <TextView
                    />
                <TextView
                    />
            </TableRow>

        </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>